src/style.css
#info {
    position: absolute;
    z-index: 10;
    left: 25px;
    top: 25px;
}
 
#defs {
    height: 0;
    width:0;
}

#rofpanel {
    width: 100%;
    height: 100%;
    min-height:100%;
    overflow: hidden;
}

.frame {
    fill: none;
    pointer-events: all;
}
 
.feature {
    fill: #6CCC00;
    stroke: #fff;
    stroke-width: .5px;
}
 
.globe {
    stroke: rgba(255, 255, 255, .5);
    stroke-width: .25px;
}

svg {
    position: absolute;
    top: 0;
    left: 0;
}

rect {
    fill: transparent;
}

h1 {
  position: absolute;
  top: 280px;
  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
  font-size: 18px;
  text-align: center;
  width: 960px;
}

.ruler-label {

}

#tracking-overlay
{
	background: url('images/target.png');
	position: absolute;
	top: 0;
	left: 0;
	width: 36px;
	height: 36px;
}
#property-table{
}
#table-data, #table-data-mete{
    color: rgb(213, 213, 213);
    background-color: rgba(53, 57, 63, 0.76);
    font-size:12px;
    /* border-radius: 10px; */
    /* border:1px solid; */
    /* border-color:rgba(255, 255, 255, .5); */
    font-family: monospace;
}

.td{
    border:1px solid;
    border-color:rgba(255, 255, 255, .5);
}

#info-panel{
    top:50px;
    width:200px;
    position: absolute;
}

/* ---------------------------------------- */

  #feedback { font-size: 1.4em; }
  #selectable .ui-selecting { background: #26B3F7; }
  #selectable .ui-selected { background: #0972A5; color: white; }
  #selectable { list-style-type: none; margin: 0; padding: 0; width: 100%; }
  #selectable li { margin: 3px; padding: 0.4em; font-size:11px; height: 18px; }


::-webkit-scrollbar -moz-appearance {
	width: 8px;
}
::-webkit-scrollbar-button {
	width: 8px;
	height:5px;
}
::-webkit-scrollbar-track {
	background: #FFF;
	/* border: thin solid lightgray; */
	/* box-shadow: 0px 0px 3px #dfdfdf inset; */
	/* border-radius:10px; */
}
::-webkit-scrollbar-thumb {
	background: #C5C5C5;
	/* border: thin solid gray; */
	/* border-radius:10px; */
}
::-webkit-scrollbar-thumb:hover {
	background:#7d7d7d;
}			

